<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <EditText
            android:id="@+id/server_ip"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:hint="@string/ip_address"/>

        <EditText
            android:id="@+id/server_port"
            android:layout_marginLeft="20dp"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/ip_port"/>
        
        <Button
            android:id="@+id/connect"
            android:layout_marginLeft="20dp"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/connect"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        
       <RadioGroup
           android:id="@+id/radio_group"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:orientation="horizontal">

           <RadioButton
               android:id="@+id/teacher"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text="@string/teacher"
               android:checked="true"/>

           <RadioButton
               android:id="@+id/student"
               android:layout_marginLeft="20dp"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:text="@string/student"
               android:layout_height="wrap_content" />

       </RadioGroup>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="600dp"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/pantilt_speed"/>

        <EditText
            android:id="@+id/pantilt_speed"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:hint="@string/pantile_speed_hint"/>

        <Button
            android:id="@+id/pantilt_speed_save"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/pre_pos_set"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/up"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/up"/>

        <Button
            android:id="@+id/down"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/down"/>

        <Button
            android:id="@+id/left"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/left"/>

        <Button
            android:id="@+id/right"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/right"/>

        <Button
            android:id="@+id/reset"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/reset"/>

    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/zoom_wide"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/zoom_wide"/>

        <EditText
            android:id="@+id/zoom_wide_speed"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/zoom_speed_hint"/>

        <Button
            android:id="@+id/zoom_tele"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/zoom_tele"/>

        <EditText
            android:id="@+id/zoom_tele_speed"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/zoom_speed_hint"/>

    </LinearLayout>
    
    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <EditText
            android:id="@+id/pre_pos_edit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/pre_pos_hint"/>

        <Button
            android:id="@+id/pre_pos_recall"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/pre_pos_recall"/>

        <Button
            android:id="@+id/pre_pos_set"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/pre_pos_set"/>
    </LinearLayout>


</LinearLayout>
